--- a/fiestas/requirements.txt
+++ b/fiestas/requirements.txt
@@ -16,4 +16,4 @@ fontawesomefree==6.2.1
 django-simple-history==3.2.0
 django-colorfield==0.8.0
 django-bootstrap-datepicker-plus==5.0.3
-fpdf==1.7.2
+xhtml2pdf==0.2.9
