--- a/fiestas/requirements.txt
+++ b/fiestas/requirements.txt
@@ -17,3 +17,6 @@ django-simple-history==3.2.0
 django-colorfield==0.8.0
 django-bootstrap-datepicker-plus==5.0.3
 xhtml2pdf==0.2.9
+django-colorfield==0.9.0
+django-ckeditor==6.6.1
+django-betterforms==2.0.0
